Make area a proper object
Server changes and java client changes
